syntax = "proto3";

package follow.v1;
option go_package="github.com/msqtt/sevencowcloud-shortvideo-service/api/pb/v1/follow;pb_fl";

import "user/user.proto";

message FollowUserRequest {
	int64 following_id = 1;
	int64 followed_id = 2;
}

message FollowUserResponse {
	int64 followed_at = 1;
}

message UnFollowUserRequest {
	int64 following_id = 1;
	int64 followed_id = 2;
}

message UnFollowUserResponse {
	int64 now = 1;
}

message CheckFollowRequest {
	int64 following_id = 1;
	int64 followed_id = 2;
}

message CheckFollowResponse {
	bool is_following = 1;
	int64 followed_at = 2;
}

message FollowingListRequest {
	int64 user_id = 1;
}

message FollowingListResponse {
	repeated user.v1.UserItem users = 1;
}

message FollowedListRequest {
	int64 user_id = 1;
}

message FollowedListResponse {
	repeated user.v1.UserItem users = 1;
}

